# RLVR

./: .gitignore  GRPO_Trainer.py  Generate_Dataset.ipynb  IE_GRPO.ipynb  Qwen3_(4B)_GRPO.ipynb  README.md  SFT_warmUP.py  art-e.ipynb  generateDatasets.py  grpo_loop.py  main.py  patent_dataset.py  pyproject.toml  requirements.txt  reward_ie.py  utils.py  wordle_grpo_trl.py
Patent_Data/: train_manifest.parquet  val_manifest.parquet
