[project]
name = "rlvr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "docling>=2.57.0",
    "openai>=2.5.0",
    "reportlab>=4.4.4",
    "transformers>=4.57.1",
    "pandas>=2.2.2",
    "pyarrow>=14.0.1",
    "jsonschema>=4.23.0",
    "rapidfuzz>=3.9.0",
]
